# strained_apfc

./: .buildinfo  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/background/: bibliography.doctree  displacement.doctree  energy_functional.doctree  fourier.doctree  hydropfc.doctree  index.doctree  initialization.doctree  notation.doctree  stress_strain.doctree
.doctrees/background/additional_info/: airy_stress_function.doctree  burgers_vector.doctree  helmholtz_decomposition.doctree  index.doctree  levi_civita_symbol.doctree
.doctrees/code_doc/: config_reference.doctree  index.doctree
.doctrees/code_doc/modules/: index.doctree
.doctrees/code_doc/modules/calculations/: calculations.doctree  defect_detection.doctree  initialize.doctree  observables.doctree  params.doctree  triangular.doctree
.doctrees/updates/: index.doctree
.doctrees/updates/2023-09-13/: 2023-09-13.doctree
.doctrees/updates/2023-09-27/: 2023-09-27.doctree
.doctrees/updates/2023-11-01/: 2023-11-01.doctree
.github/workflows/: documentation.yml
_sources/: index.md.txt
_sources/background/: fourier.md.txt  hydropfc.md.txt  index.md.txt  notation.md.txt
_sources/background/additional_info/: airy_stress_function.md.txt  burgers_vector.md.txt  index.md.txt  levi_civita_symbol.md.txt
_sources/code_doc/: index.md.txt
_sources/code_doc/modules/: index.md.txt
_sources/code_doc/modules/calculations/: observables.md.txt
_sources/updates/: index.md.txt
background/: bibliography.html  displacement.html  energy_functional.html  fourier.html  hydropfc.html  index.html  initialization.html  notation.html  stress_strain.html
background/additional_info/: airy_stress_function.html  burgers_vector.html  helmholtz_decomposition.html  index.html  levi_civita_symbol.html
code_doc/: config_reference.html  index.html
code_doc/modules/: index.html
code_doc/modules/calculations/: calculations.html  defect_detection.html  initialize.html  observables.html  params.html  triangular.html
data/052d/: config.json
data/052d_1linedef/: config.json
data/052d_2linedef_horizontal/: config.json
data/052d_2linedef_vertical/: config.json
data/052d_4linedef/: config.json
data/visualization_config_example/: config.json
docs/doxygen/: Doxyfile
docs/sphinx/source/: conf.py  index.md  refs.bib
docs/sphinx/source/background/: bibliography.md  displacement.md  energy_functional.md  hydropfc.md  index.md  initialization.md  notes_questions.md  stress_strain.md
docs/sphinx/source/background/additional_info/: burgers_vector.md  helmholtz_decomposition.md  index.md  solid_phase_init.md
docs/sphinx/source/background/papers/: hydrodynamics.md  index.md  plastic_motion.md
docs/sphinx/source/code_doc/: config_reference.md  index.md
docs/sphinx/source/code_doc/modules/calculations/: calculations.md  defect_detection.md  (+1 more)
docs/sphinx/source/updates/: index.md
docs/sphinx/source/updates/2023-09-13/: 2023-09-13.md
docs/sphinx/source/updates/2023-09-27/: 2023-09-27.md
docs/sphinx/source/updates/2023-11-01/: 2023-11-01.md
docs/sphinx/source/updates/2024-02-12/: 2024-02-12.md
scripts/: write_version_to_file.py
src/: apfc-plot-density.py  defect_track.py  tmp.ipynb  visualizations.ipynb  visualizations.py  visualizations2.ipynb
src/calculations/: defect_detection.py  initialize.py  observables.py  operator.py  theory.py  triangular.py
src/finite_elements/: base_apfc.cpp  base_apfc.hpp  main.cpp  simple_apfc.cpp  simple_apfc.hpp
src/fourier_methods/: base_runner.py  fft_sim.py  hapfc_runner.py  n0_runner.py
src/manage/: read_write.py
src/strained_apfc/: apfc-run-fft.py
src/strained_apfc/calculations/: __init__.py  defect_detection.py  initialize.py  observables.py  params.py
src/strained_apfc/fourier_methods/: base_runner.py  fft_sim.py  hapfc_runner.py  hapfc_simple_runner.py  hapfc_solid_liquid_runner.py  n0_runner.py  parameter_sets.py
src/strained_apfc/manage/: utils.py
tests/: test_defect_detection.py
updates/: index.html
updates/2023-09-13/: 2023-09-13.html
updates/2023-09-27/: 2023-09-27.html
updates/2023-11-01/: 2023-11-01.html
