[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strained_apfc"
description = ""
readme = "README.md"
requires-python = ">=3.10"
keywords = []
authors = [
  { name = "maromei", email = "maromei@proton.me" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy",
  "pandas",
  "scipy"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/maromei/strained_apf#readme"
Issues = "https://github.com/maromei/strained_apf/issues"
Source = "https://github.com/maromei/strained_apf"

[tool.hatch.version]
path = "src/__about__.py"

#######################
### COVERAGE CONFIG ###
#######################

[tool.coverage.run]
data_file = "tests/output/coverage/.coverage"

[tool.coverage.html]
directory = "tests/output/coverage"

#####################
### ENV - DEFAULT ###
#####################

[tool.hatch.envs.default]

[tool.hatch.envs.default.scripts]
fft-sim = "python src/strained_apfc/apfc-run-fft.py {args}"

[tool.hatch.envs.default.env-vars]

###################
### ENV - BUILD ###
###################

[tool.hatch.envs.build]
dependencies = [
  "GitPython"
]

[tool.hatch.envs.build.scripts]
write_version = "python scripts/write_version_to_file.py"
image = "docker build . -t strained_apfc:latest --build-arg BOOST_VERSION=$BOOST_VERSION"

[tool.hatch.envs.build.env-vars]
BOOST_VERSION = "1.83.0"

##################
### ENV - DOCS ###
##################

[tool.hatch.envs.docs]
extra-dependencies = [
  "sphinx",
  "sphinx-autobuild",
  "myst-parser",
  "furo",
  "breathe",
  "sphinxcontrib-bibtex"
]

[tool.hatch.envs.docs.scripts]
serve = "sphinx-autobuild docs/sphinx/source docs/sphinx/build/html"
clean = "cd docs/sphinx/ && make clean"
doxygen = "cd docs/doxygen && doxygen"

###################
### ENV - STYLE ###
###################

[tool.hatch.envs.style]
skip-install = true
detached = true
dependencies = [
  "pre-commit",
  "black"
]

[tool.hatch.envs.style.scripts]
precommit-install = "pre-commit install"

##################
### ENV - TEST ###
##################

[tool.hatch.envs.tests]
extra-dependencies = [
  "pytest-cov"
]

[tool.hatch.envs.tests.scripts]
cov = """
  pytest tests/ \
  --cov-report html --cov-report term \
  --cov-config=pyproject.toml \
  --cov=strained_apfc
"""
show-cov-html = "firefox tests/output/coverage/index.html"
